--- a/css/home.css
+++ b/css/home.css
@@ -592,7 +592,7 @@
     box-sizing: border-box;
     display: flex;
     height: 100%;
-    width: 50%;
+    width: 40%;
     color: #929292;
     cursor: pointer;
   }
@@ -600,7 +600,7 @@
     box-sizing: border-box;
     display: flex;
     height: 100%;
-    width: 16.666%;
+    width: 9%;
     color: #929292;
     cursor: pointer;
   }
@@ -608,7 +608,7 @@
     box-sizing: border-box;
     display: flex;
     height: 100%;
-    width: 16.666%;
+    width: 20%;
     color: #929292;
     cursor: pointer;
   }
@@ -616,7 +616,15 @@
     box-sizing: border-box;
     display: flex;
     height: 100%;
-    width: 16.666%;
+    width: 9%;
+    color: #929292;
+    cursor: pointer;
+  }
+  div[id="categorie filter"] {
+    box-sizing: border-box;
+    display: flex;
+    height: 100%;
+    width: 21%;
     color: #929292;
     cursor: pointer;
   }
@@ -692,28 +700,35 @@
     display: flex;
     margin-left: 10px;
     font-family: Roboto, sans-serif;
-    width: 50%;
+    width: 40%;
+  }
+  div[id="Categorie Operation"] {
+    box-sizing: border-box;
+    display: flex;
+    margin-left: 10px;
+    font-family: Roboto, sans-serif;
+    width: 21%;
   }
   div[id="Createur Operation"] {
     box-sizing: border-box;
     display: flex;
     margin-left: 10px;
     font-family: Roboto, sans-serif;
-    width: 16.666%;
+    width: 9%;
   }
   div[id="MAJ Operation"] {
     box-sizing: border-box;
     display: flex;
     margin-left: 10px;
     font-family: Roboto, sans-serif;
-    width: 16.666%;
+    width: 20%;
   }
   div[id="Date Operation"] {
     box-sizing: border-box;
     display: flex;
     margin-left: 10px;
     font-family: Roboto, sans-serif;
-    width: 16.666%;
+    width: 9%;
   }
   div[id="ID Operation"] {
     box-sizing: border-box;
@@ -1038,4 +1053,19 @@
     margin-top: 60px;
     flex-direction: row;
     align-items: center;
+  }
+  select[id="select categorie"] {
+    border: none;
+    outline: none;
+    background-color: #fff;
+  }
+  select[id="select status"] {
+    border: none;
+    outline: none;
+    background-color: #fff;
+  }
+  select[id="select maitre"] {
+    border: none;
+    outline: none;
+    background-color: #fff;
   }
