--- a/views/indice_bt.html
+++ b/views/indice_bt.html
@@ -173,41 +173,7 @@
 
                     <div id="container Indice">
 
-                        <div id="Box container Indice">
-
-                            <div id="Box content Indice">
-
-                                <div id="container sorters">
-
-                                  <div id="indice filter">
-
-                                     <div id="text">Indice</div>
-
-                                  </div>
-
-                                  <div id="date filter">
-
-                                    <div id="text">Date</div>
-
-                                  </div>
-
-                                </div>
-
-                                <div id="List Indice"></div>
-
-                            </div>
-
-                          </div>
-
-                    </div>
-
-                    <div id="container submit">
-
-                        <div id="box submit">
-
-                            <button type="button" class="button1" id="button indice_bt" onclick="slide_indice();">Ajouter</button>
-
-                        </div>
+                      <!-- <canvas id="btChart" style="display: flex; width: 100%;"></canvas> -->
 
                     </div>
 
@@ -265,6 +231,11 @@
 
        </div>
 
+       <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" async></script>
+       <script src="https://cdn.jsdelivr.net/npm/chart.js" async></script>
+       <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom" async></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/1.0.2/chartjs-plugin-annotation.min.js" async></script> -->
+       <script src="https://cdn.jsdelivr.net/npm/echarts@5.3.2/dist/echarts.min.js" async></script>
        <script type="application/json" src="/index.js" async></script>
        <script src="/js/script_indice_bt.js" async></script>
 
