--- a/css/indice_bt.css
+++ b/css/indice_bt.css
@@ -448,14 +448,10 @@ div[id="Title"] {
   width: 50%;
 }
 div[id="container Indice"] {
-  align-content: flex-start;
+  align-content: center;
+  justify-content: center;
   box-sizing: border-box;
   display: flex;
-  position: relative;
-  flex-basis: auto;
-  flex-wrap: wrap;
-  flex-grow: 1;
-  flex-shrink: 1;
   margin-bottom: -12px;
   margin-left: 20px;
   margin-top: -12px;
