--- a/css/indice_bt.css
+++ b/css/indice_bt.css
@@ -431,10 +431,21 @@ div[id="box header main box"] {
   box-sizing: border-box;
   display: flex;
   position: relative;
-  width: 100%;
+  width: 50%;
   height: 110px;
   padding: 10px;
   align-items: center;
+}
+div[id="box calendar"] {
+  box-sizing: border-box;
+  display: flex;
+  position: relative;
+  width: 50%;
+  height: 110px;
+  padding: 10px;
+  align-items: center;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 div[id="Title"] {
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -451,6 +462,7 @@ div[id="container Indice"] {
   align-content: center;
   justify-content: center;
   box-sizing: border-box;
+  flex-direction: row;
   display: flex;
   margin-bottom: -12px;
   margin-left: 20px;
@@ -462,13 +474,32 @@ div[id="container Indice"] {
 div[id="Box container Indice"] {
   box-sizing: border-box;
   display: block;
-  flex-basis: 100%;
-  flex-grow: 0;
-  flex-shrink: 0;
-  height: 100%;
-  max-width: 100%;
   padding: 12px;
-  width: 100%;
+  width: 60%;
+}
+div[id="tableau-selection"] {
+  max-height: "100%";
+  overflow-y: auto;
+  width: 20%;
+  padding-left: 10px;
+}
+div[id="tableau-selection"]::-webkit-scrollbar {
+  width: 0px;
+}
+div[id="tableau-actualise"] {
+  max-height: "100%";
+  width: 20%;
+}
+table {
+  width: 100%; /* Assurez-vous que le tableau prend 100% de la largeur de son conteneur */
+  border-collapse: collapse; /* Fusionne les bordures des cellules */
+}
+
+td {
+  text-align: left; /* Alignement du texte à gauche dans les cellules */
+  vertical-align: top; /* Alignement vertical en haut dans les cellules */
+  padding: 10px; /* Ajoutez un espace autour du contenu de chaque cellule */
+  border: 1px solid #ccc; /* Ajoutez une bordure aux cellules pour la lisibilité */
 }
 div[id="Box content Indice"] {
   box-sizing: border-box;
@@ -678,4 +709,95 @@ input[class="ajout d'indice"] {
   font-size: large;
   padding-bottom: 10px;
   border-bottom: 1px solid;
+}
+
+/* DEBUT calendrier JS : jsSimpleDatePickr */
+#calendarMain1, #calendarMain2{
+  margin-left: 20%;
+}
+/* conteneur calendrier */
+.calendarWrap{
+  display: none;
+  position: absolute;
+  z-index: 1000;
+  width: 210px;
+  padding: 5px 10px 10px 10px;
+  background-color: #2e373f;
+  /*background-color: rgba(46, 55, 63, 0.95);*/
+  border-radius: 10px;
+  -moz-box-shadow: 0 0 10px #555;
+  -webkit-box-shadow: 0 0 10px #555;
+  box-shadow: 0 0 10px #555;
+  font-size: 12px;
+}
+/* bouton d'affichage*/
+#calendarMain1 > input, #calendarMain2 > input{
+  display: block;
+  width: 100px;
+  height: 22px;
+  padding-top: 2px;
+  background-color: #2e373f;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+}
+#calendarMain1 > input:hover, #calendarMain2 > input:hover{
+  background-color: #2673cb;
+}
+/* navigation dans le calendrier */
+.calendarWrap ul{
+  margin: 5px 0 10px 0;
+  padding: 0;
+}
+.calendarWrap li{
+  margin: 0;
+  padding: 0;
+  width: 20px;
+  display: inline-block;
+}
+.calendarWrap li.calendarTitle{
+  width: 170px;
+  color: #ccc;
+  text-align: center;
+}
+.calendarWrap li input{
+  width: 20px;
+  background-color: #5d6f7f;
+  border: none;
+  color: #fff;
+}
+.calendarWrap li input:hover{
+  background-color: #6f8598;
+}
+/* calendrier */
+.jsCalendar{
+  color: #fff;
+  border-collapse: collapse;
+}
+.jsCalendar th{
+  color: #8ba7bf;
+  font-size: 16px;
+  font-weight: normal;
+  text-align: center;
+}
+.jsCalendar td{
+  padding: 0;
+  border: none;
+}
+.jsCalendar a{
+  display: block;
+  width: 30px;
+  padding: 3px 0 3px 0;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  text-align: center;
+}
+.jsCalendar .day:hover a{
+  background-color: #2673cb;
+  border-color: #2673cb;
+}
+.jsCalendar .selectedDay a{
+  background-color: #c44d38;
+  border-color: #c44d38;
 }
