--- a/views/indice_bt.html
+++ b/views/indice_bt.html
@@ -169,11 +169,22 @@
 
                       </div>
 
+                      <div id="box calendar">
+
+                        <p>Date : <input type="text" value="" name="date2" id="champ_date2" size="12" maxlength="10"></p>
+                        <div id="calendarMain2"></div>
+
+                      </div>
+
                     </header>
 
                     <div id="container Indice">
 
-                      <!-- <canvas id="btChart" style="display: flex; width: 100%;"></canvas> -->
+                      <div id="Box container Indice"></div>
+
+                      <div id="tableau-actualise"></div>
+
+                      <div id="tableau-selection"></div>
 
                     </div>
 
