--- a/views/indice_bt.html
+++ b/views/indice_bt.html
@@ -171,7 +171,8 @@
 
                       <div id="box calendar">
 
-                        <p>Date : <input type="text" value="" name="date2" id="champ_date2" size="12" maxlength="10"></p>
+                        <p>Date : <input type="text" value="" name="date2" id="champ_date2" size="12" maxlength="10" readonly></p>
+                        <p style="margin-left: 10px;">Estimation : <input type="text" value="" name="estimation" id="champ_estimation" size="12" maxlength="10" readonly></p>
                         <div id="calendarMain2"></div>
 
                       </div>
