--- a/views/indice_bt.html
+++ b/views/indice_bt.html
@@ -171,9 +171,6 @@
 
                       <div id="box calendar">
 
-                        <p>Date : <input type="text" value="" name="date2" id="champ_date2" size="12" maxlength="10"></p>
-                        <div id="calendarMain2"></div>
-
                       </div>
 
                     </header>
@@ -182,7 +179,20 @@
 
                       <div id="Box container Indice"></div>
 
-                      <div id="tableau-actualise"></div>
+                      <div id="box info">
+                        <p style="margin-top: 100px;">Bt actualiser : <input type="text" value="" name="date2" id="champ_bt_actualise2" size="12" maxlength="10" readonly></p>
+                        <p>Date Bt plus ancien :
+                          <input type="text" value="" name="date2" id="champ_date_ancien2" size="10" maxlength="5" readonly>
+                          <input type="text" value="" name="date2" id="champ_bt_ancien2" size="5" maxlength="5" readonly>
+                        </p>
+                        <p>Date Bt plus recent :
+                          <input type="text" value="" name="date2" id="champ_date_recent2" size="10 " maxlength="5" readonly>
+                          <input type="text" value="" name="date2" id="champ_bt_recent2" size="5" maxlength="5" readonly>
+                        </p>
+                        <div id="calendarMain2" style="margin-top: 300px;"></div>
+                        <p>Date : <input type="text" value="" name="date2" id="champ_date2" size="12" maxlength="10" readonly></p>
+                        <p>Estimation : <input type="text" value="" name="date2" id="champ_estimation2" size="12" maxlength="10" readonly></p>
+                      </div>
 
                       <div id="tableau-selection"></div>
 
