--- a/views/indice_bt.html
+++ b/views/indice_bt.html
@@ -179,7 +179,8 @@
                       <div id="Box container Indice"></div>
 
                       <div id="box info">
-                        <p style="margin-top: 100px;">Bt actualiser : <input type="text" value="" name="date2" id="champ_bt_actualise2" size="12" maxlength="10" readonly></p>
+                        <p style="margin-left: 70px; font-size: large; font-weight: bold;">Actualisation du Bt</p>
+                        <p style="margin-top: 60px;">Bt actualiser : <input type="text" value="" name="date2" id="champ_bt_actualise2" size="12" maxlength="10" readonly></p>
                         <p>Date Bt plus ancien :
                           <input type="text" value="" name="date2" id="champ_date_ancien2" size="10" maxlength="5" readonly>
                           <input type="text" value="" name="date2" id="champ_bt_ancien2" size="5" maxlength="5" readonly>
@@ -188,12 +189,16 @@
                           <input type="text" value="" name="date2" id="champ_date_recent2" size="10 " maxlength="5" readonly>
                           <input type="text" value="" name="date2" id="champ_bt_recent2" size="5" maxlength="5" readonly>
                         </p>
-                        <div id="calendarMain2" style="margin-top: 300px;"></div>
+                        <p style="margin-top: 250px; margin-left: 70px; font-size: large; font-weight: bold;">Projection du Bt</p>
+                        <div id="calendarMain2" style="margin-top: 60px;"></div>
                         <p>Date : <input type="text" value="" name="date2" id="champ_date2" size="12" maxlength="10" readonly></p>
                         <p>Estimation : <input type="text" value="" name="date2" id="champ_estimation2" size="12" maxlength="10" readonly></p>
                       </div>
 
-                      <div id="tableau-selection"></div>
+                      <div id="box tableau">
+                        <p style="margin-left: 70px; font-size: large; font-weight: bold;">Liste des Bt Selectionnés</p>
+                        <div id="tableau-selection"></div>
+                      </div>
 
                     </div>
 
